# 3DFEM-UQ-AR

./: .gitignore  README.md  gradKriging.m  gsTools.py  iid.mat  krigingTest.py  skgstat_compare.py  testVario.m  variogram.m
Figures/AR/: meanconvergence.fig
cpp/: FEM_Mesh_wrong_materials.in  Main.cpp  elem_refined.txt  facets_refined.txt  geom_refined.txt  ref_0.in  run_modes.cpp  run_modes.h  sphere_final.in  vertex_ordering.txt
cpp/Bayes/: bayes.cpp  bayes.h
cpp/HOPS/: hops.cpp  hops.h
cpp/Kriging/: kriging.cpp  kriging.h
cpp/control/: StructureControl.cpp  StructureControl.h
cpp/executable/: CMakeLists.txt  FEM++.sln  FEM++.vcxproj  FEM++.vcxproj.filters  controls_refined.txt  debug_calpha.txt  debug_calpha_mod.txt  debug_calpha_orig.txt  rcs_list.txt  rcs_list_perturbed_2,22.txt  refined_element_list.txt  refinement_iterations.txt  refinement_iterations_MAGaf.txt  refinement_iterations_cube.txt  refinement_iterations_mostly_complete.txt  refinement_iterations_sphere.txt  refinement_orders.txt  refinement_orders_cube.txt  refinement_orders_magAF.txt  refinement_orders_mostly_complete.txt  refinement_orders_sphere.txt  refinement_rcs_cube.txt  refinement_rcs_magAF.txt  refinement_rcs_mostly_complete.txt  refinement_rcs_sphere.txt
cpp/executable/x64/Debug/: FEM++.exe.recipe  FEM++.vcxproj.FileListAbsolute.txt
cpp/executable/x64/Debug/FEM++.tlog/: FEM++.lastbuildstate  icx-clang-cl.10168.delete.1.tlog  icx-clang-cl.10336.delete.1.tlog  icx-clang-cl.10960.delete.1.tlog  icx-clang-cl.11160.delete.1.tlog  icx-clang-cl.11480.delete.1.tlog  icx-clang-cl.11668.delete.1.tlog  icx-clang-cl.12432.delete.1.tlog  icx-clang-cl.12668.delete.1.tlog  icx-clang-cl.12692.delete.1.tlog  icx-clang-cl.12840.delete.1.tlog  icx-clang-cl.13428.delete.1.tlog  icx-clang-cl.13688.delete.1.tlog  icx-clang-cl.14268.delete.1.tlog  icx-clang-cl.14436.delete.1.tlog  icx-clang-cl.14684.delete.1.tlog  icx-clang-cl.14756.delete.1.tlog  icx-clang-cl.14900.delete.1.tlog  icx-clang-cl.15836.delete.1.tlog  icx-clang-cl.16120.delete.1.tlog  icx-clang-cl.1628.delete.1.tlog  icx-clang-cl.16516.delete.1.tlog  icx-clang-cl.16612.delete.1.tlog  icx-clang-cl.17024.delete.1.tlog  icx-clang-cl.17716.delete.1.tlog  icx-clang-cl.17804.delete.1.tlog  icx-clang-cl.17888.delete.1.tlog  icx-clang-cl.1824.delete.1.tlog  icx-clang-cl.18824.delete.1.tlog  icx-clang-cl.19352.delete.1.tlog  icx-clang-cl.19436.delete.1.tlog  icx-clang-cl.19580.delete.1.tlog  icx-clang-cl.19652.delete.1.tlog  icx-clang-cl.19692.delete.1.tlog  icx-clang-cl.20052.delete.1.tlog  icx-clang-cl.20272.delete.1.tlog  icx-clang-cl.20900.delete.1.tlog  icx-clang-cl.20940.delete.1.tlog  icx-clang-cl.21076.delete.1.tlog  icx-clang-cl.21344.delete.1.tlog  (+138 more)
cpp/executable/x64/Release/: FEM++.exe.recipe  FEM++.vcxproj.FileListAbsolute.txt
cpp/executable/x64/Release/FEM++.tlog/: FEM++.lastbuildstate  icx-clang-cl.10108.delete.1.tlog  icx-clang-cl.10232.delete.1.tlog  icx-clang-cl.10388.delete.1.tlog  icx-clang-cl.10432.delete.1.tlog  icx-clang-cl.10480.delete.1.tlog  icx-clang-cl.10652.delete.1.tlog  icx-clang-cl.10836.delete.1.tlog  icx-clang-cl.11024.delete.1.tlog  icx-clang-cl.1108.delete.1.tlog  icx-clang-cl.11168.delete.1.tlog  icx-clang-cl.11212.delete.1.tlog  icx-clang-cl.11288.delete.1.tlog  icx-clang-cl.11312.delete.1.tlog  icx-clang-cl.1132.delete.1.tlog  icx-clang-cl.1140.delete.1.tlog  icx-clang-cl.11408.delete.1.tlog  icx-clang-cl.11504.delete.1.tlog  icx-clang-cl.11560.delete.1.tlog  icx-clang-cl.11728.delete.1.tlog  icx-clang-cl.11756.delete.1.tlog  icx-clang-cl.11848.delete.1.tlog  icx-clang-cl.11916.delete.1.tlog  icx-clang-cl.11952.delete.1.tlog  icx-clang-cl.12032.delete.1.tlog  icx-clang-cl.12052.delete.1.tlog  icx-clang-cl.12064.delete.1.tlog  icx-clang-cl.12208.delete.1.tlog  icx-clang-cl.12224.delete.1.tlog  icx-clang-cl.12516.delete.1.tlog  icx-clang-cl.12560.delete.1.tlog  icx-clang-cl.12648.delete.1.tlog  icx-clang-cl.12724.delete.1.tlog  icx-clang-cl.12740.delete.1.tlog  icx-clang-cl.1284.delete.1.tlog  icx-clang-cl.13040.delete.1.tlog  icx-clang-cl.13164.delete.1.tlog  icx-clang-cl.13224.delete.1.tlog  icx-clang-cl.13308.delete.1.tlog  icx-clang-cl.13444.delete.1.tlog  (+604 more)
cpp/fileIO/: fileIO2.cpp  fileIO2.h
cpp/file_converter/: 6,-1,8.in  6,0_1,1_final.in  6,0_1,2_final.in  FEMIN_qoitest2.in  FEM_Mesh.in  boundary.txt  fileFacet.h  file_input_converter.sln  geometry.txt  input_file_converter.cpp  materials.txt  materials_input.h  r0,8_test_15,65alpha1,36pml.in  r1,2_e2,25_alpha16,1_pml1,85.in  r1,2_e2,25_sigma0.in  ref_21.in
cpp/functions/: Coordinates.cpp  Coordinates.h  basis.h  elunknowns.h  find_at_quad.h  integralFunctions.cpp  integralFunctions.h  matrixFilling.cpp  matrixFilling.h  products.h  qoi_error.cpp  qoi_error.h  sensitivity.h  sparsePacking.cpp  sparsePacking.h  unitVectorsM.cpp  unitVectorsM.h
cpp/integrals/: BasisEval.cpp  BasisEval.h  Integral_c.cpp  Integral_c.h  Integral_d.cpp  Integral_d.h  Integral_g.cpp  Integral_g.h  IntegralsG.cpp  findIntegrals.cpp  findIntegrals.h
cpp/matlab/: cube.m  element1.txt  element_ref.txt  halfway.m  points.txt  points_ref.txt  sphere_test.m  test.m
cpp/matricies/: matrix2d.h  matrix3d.h  matrix4d.h
cpp/monte_carlo_files_2d/: distri_info.txt  monte_qoi2d.txt
cpp/monte_carlo_files_6epsr/: file_1.in  file_2.in  file_3.in  file_4.in  file_5.in  materials_list.txt
cpp/monte_carlo_files_highdim/: monte_qoi.txt  references_highdim.txt
cpp/postprocessing/: postprocessing.cpp  postprocessing.h
cpp/reference_files/: ref_0.in  ref_1.in  ref_10.in  ref_11.in  ref_12.in  ref_13.in  ref_14.in  ref_15.in  ref_16.in  ref_17.in  ref_18.in  ref_19.in  ref_2.in  ref_3.in  ref_4.in  ref_5.in  ref_6.in  ref_7.in  ref_8.in  ref_9.in
cpp/reference_files_2im/: materials_list.txt  ref_0.in  ref_1.in  ref_10.in  ref_11.in  ref_12.in  ref_13.in  ref_14.in  ref_15.in  ref_16.in  ref_17.in  ref_18.in  ref_2.in  ref_20.in  ref_3.in  ref_4.in  ref_5.in  ref_6.in  ref_7.in  ref_8.in  ref_9.in
cpp/reference_files_freq/: ref_0.in  ref_1.in  ref_2.in  ref_2_Jake.in  ref_3.in  ref_4.in
(+5554 files in other folders)
